--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     compile (
             "io.netty:netty-all:4.1.36.Final",
             "com.google.protobuf:protobuf-java:3.8.0",
-            "com.google.protobuf:protobuf-java-util:3.8.0"
+            "com.google.protobuf:protobuf-java-util:3.8.0",
+            "org.apache.thrift:libthrift:0.12.0"
     )
 }
