--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'com.google.protobuf' version '0.8.8'
+    id 'idea'
 }
 
 group 'com.ssy'
@@ -7,6 +9,10 @@ version '1.0'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+
+def grpcVersion = '1.21.0' // CURRENT_GRPC_VERSION
+def protobufVersion = '3.8.0'
+def protocVersion = protobufVersion
 
 repositories {
     maven {
@@ -22,8 +28,37 @@ dependencies {
     )
     compile (
             "io.netty:netty-all:4.1.36.Final",
-            "com.google.protobuf:protobuf-java:3.8.0",
-            "com.google.protobuf:protobuf-java-util:3.8.0",
+            "com.google.protobuf:protobuf-java:${protobufVersion}",
+            "com.google.protobuf:protobuf-java-util:${protobufVersion}",
+            "io.grpc:grpc-protobuf:${grpcVersion}",
+            "io.grpc:grpc-stub:${grpcVersion}",
+            "io.grpc:grpc-netty-shaded:${grpcVersion}",
             "org.apache.thrift:libthrift:0.12.0"
     )
+    compileOnly "javax.annotation:javax.annotation-api:1.2"
+}
+
+protobuf {
+    protoc { artifact = "com.google.protobuf:protoc:${protocVersion}" }
+    plugins {
+        grpc { artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}" }
+    }
+    generatedFilesBaseDir = "src"
+    generateProtoTasks {
+        all()*.plugins {
+            grpc {
+                outputSubDir = "java"
+            }
+        }
+    }
+}
+
+// Inform IDEs like IntelliJ IDEA, Eclipse or NetBeans about the generated code.
+sourceSets {
+    main {
+        java {
+            srcDirs 'build/generated/source/proto/main/grpc'
+            srcDirs 'build/generated/source/proto/main/java'
+        }
+    }
 }
